[package]
name =      "epidemic"
version =   "0.1.0"
authors =   ["Karl Runge"]
edition =   "2018"

[dependencies]
amethyst =      "0.15.3"
rendy =         "0.5.1"
shred =         "0.10.2"
chrono =        "0.4.19"
tiled =         "0.9.3"
pathfinding =   "2.0.4"
rand =          "0.7.3"
names =         "0.11.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
