[package]
name = "tiled-amethyst-example"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
base64  = "0.10"
xml-rs  = "0.8"
libflate = "0.1.18"
tiled =     "0.9.2"

[features]
default = ["vulkan", "tiles"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
tiles = ["amethyst/tiles"]